# Physical_compute_Project_1

./: .gitignore  CMakeLists.txt  README.md
Arduino/ECU_SIMULATOR/: ECU_SIMULATOR.ino
Arduino/GetLiveData/: GetLiveData.ino  OBD2_KLine.cpp  OBD2_KLine.h  wifi_K.cpp  wifi_K.h
Arduino/Request Windows/: HondaECU_IT.c
Arduino/sketch_oct10a/: sketch_oct10a.ino
Arduino/sketch_sep27a/: sketch_sep27a.ino
Web/: details.html  index.css
Web/assets/: app.js
docs/: details.html  index.html  p_aom_cursor.js
docs/assets/: style.css
include/: common.h  connection_manager.h  dashboard.h  data_export.h  data_logger.h  dtc_viewer.h  esp32_driver.h  ftdi.h  obd_commands.h  obd_parser.h  ringbuffer.h  settings.h  ui.h  worker.h
src/: connection_manager.c  dashboard.c  data_export.c  data_logger.c  dtc_viewer.c  esp32_driver.c  esp32_driver_init.c  ftdi_d2xx.c  ftdi_stub.c  ftdi_usb_enum.c  main.c  nk_impl.c  obd_commands.c  obd_parser.c  ringbuffer.c  settings.c  ui.c  worker.c
